kubernetes/apps/argo-system/argo-cd/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - argo.gitlab.be
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
sops:
  age:
    - recipient: age1086gtxn8l9dh0t2y0nu5ye0hczjyjc7q5tengjcf8lkynlta653sapg96f
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrOCtrRTd1QzRYYUs3ZHBn
[...]
        VwhHB9BXQV0jBC91LIby8DdijLhopfTK8rwk+8dy2sG1qFNAxO5Mig==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-09-02T08:12:27Z"
  mac: ENC[AES256_GCM,data:a1LIVhyKOZFXqx85W9hhJ+VCTaSP5kI9iVWUykT8WR4p24b1p8QE4ZjRs5RrGbPsKVz3Nhp10juZzWUVUAr14AmiUBgP2aPxw+I3GbSxnQ7skl+u/KvBBL0dcC982Z9VEupVlbc0wJt5PdIrZHpMXVWQ/0OvhFy57oE3e3sK6GU=,iv:DQ8EQ8CO4FFff0huEo2R5R/x5R4pVUFzJHmNvbLgkYU=,tag:IjQ0B852nr21zSsVRuui3A==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
